# dpll

./: GNUmakefile  GNUmakefile.conf  debug  dpll  dpll.install  grep  minim  test
_build/default/: dpll.dune-package  dpll.install  dpll.opam
_build/default/src/: .merlin  ast.mli  ast_dimacs.ml  console.ml  dpll.ml  lexerDimacs.ml  lexerDimacs.mll  location.ml  main.ml  parserDimacs.ml  parserDimacs.mli  parserDimacs.mly  parserDimacs__mock.ml.mock  parserDimacs__mock.mli.inferred  sudoku.ml  sudoku.mli  tokensDimacs.ml  tokensDimacs.mli  unequal.ml
_build/default/src/.main.eobjs/: ast.ml.d  ast.mli.d  ast_dimacs.ml.d  console.ml.d  dimacs.impl.all-deps  dimacs.ml.d  dpll.ml.d  dpll.mli.d  lexerDimacs.impl.all-deps  lexerDimacs.ml.d  location.ml.d  main.impl.all-deps  main.ml.d  parserDimacs.ml.d  parserDimacs.mli.d  parserDimacs__mock.impl.all-deps  parserDimacs__mock.ml.mock.d  sudoku.ml.d  sudoku.mli.d  tokensDimacs.ml.d  tokensDimacs.mli.d  unequal.ml.d  unequal.mli.d
_build/default/src/.main.eobjs/byte/: ast.cmi  ast.cmti  console.cmi  console.cmo  console.cmt  dimacs.cmi  dimacs.cmo  dimacs.cmt  dpll.cmi  dpll.cmti  lexerDimacs.cmi  lexerDimacs.cmo  lexerDimacs.cmt  location.cmi  location.cmo  location.cmt  main.cmi  main.cmo  main.cmt  parserDimacs.cmi  parserDimacs.cmti  sudoku.cmi  sudoku.cmti  tokensDimacs.cmi  tokensDimacs.cmti  unequal.cmi  unequal.cmti
_build/default/src/.main.eobjs/native/: ast.cmx  console.cmx  dimacs.cmx  dpll.cmx  lexerDimacs.cmx  location.cmx  main.cmx  parserDimacs.cmx  sudoku.cmx  (+2 more)
_build/default/src/.merlin-conf/: exe-main
(+21 files in other folders)
