synopsis: "A naive implementation of DPLL algorithm"
description:
"""
An implementation of DPLL algorithm, a homework for the \"Logic Project\" class (Bachelor degree at the ENS Paris-Saclay).
"""
opam-version: "0.1"
license: "CeCILL"

depends: [
  "ocaml"        {         >= "4.04.0" }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
